force-app/main/default/objects/Investment_Portfolio__c/Investment_Portfolio__c.object-meta.xml
<CustomObject>
    <label>Investment Portfolio</label>
    <nameField>
        <label>Investment Portfolio Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Investment Portfolios</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>